fixed overlaping issue with button

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,6 +85,10 @@ main{
     color: white;
 }
 
+iframe{
+    padding-top: 10px;
+}
+
 img{
     margin-left: auto;
     margin-right: auto;
